[package]
name = "firstwelcome"
version = "0.1.1"
authors = ["imran82ali <code.imranali@gmail.com>"]
edition = "2018"
repository = "https://github.com/imran82ali/firstwelcome"
homepage = "https://github.com/imran82ali/firstwelcome"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "First Welcome Library "

[dependencies]
